06_k8s_platforms/argocd/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - argocd01.westeurope.cloudapp.azure.com
#     secretName: tls-ingress-argocd-secret
#   rules:
#   - host: argocd01.westeurope.cloudapp.azure.com
#     http:
#       paths:
#       - path: /hello-world-one(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 443 # 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     # kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: http
#     host: argocd01.westeurope.cloudapp.azure.com
#   tls:
#   - hosts:
#     - argocd01.westeurope.cloudapp.azure.com
#     secretName: argocd-secret # do not change, this is provided by Argo CD

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd01.westeurope.cloudapp.azure.com
    secretName: tls-ingress-argocd-secret
  rules:
  - host: argocd01.westeurope.cloudapp.azure.com # argocd.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   ingressClassName: nginx # nginx
#   # tls:
#   # - hosts:
#   #   - argocd01.westeurope.cloudapp.azure.com
#   #   secretName: tls-ingress-app-02-secret
#   rules:
#   # - host: aks-app-02.westeurope.cloudapp.azure.com
#   - http:
#       paths:
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: https
#               # number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     # kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: http
#     host: argocd01.westeurope.cloudapp.azure.com # argocd.example.com
#   tls:
#   - hosts:
#     - argocd01.westeurope.cloudapp.azure.com # argocd.example.com
#     secretName: argocd-secret # do not change, this is provided by Argo CD
